feat: add history account
