# docs/swagger.yaml
@@ -463,6 +463,21 @@ definitions:
       transaction_type:
         $ref: '#/definitions/enums.TransactionType'
     type: object
+  response.AccountStatementResponse:
+    properties:
+      client_id:
+        type: integer
+      end_date:
+        type: string
+      start_date:
+        type: string
+      starting_balance:
+        type: number
+      transactions:
+        items:
+          $ref: '#/definitions/response.TransactionResponse'
+        type: array
+    type: object
   response.AdminDebtSummary:
     properties:
       client_id:
@@ -1707,6 +1722,80 @@ paths:
           schema:
             $ref: '#/definitions/response.ErrorResponse'
       summary: Update a credit account
+      tags:
+      - CreditAccounts
+  /credit-accounts/clients/{clientID}/history:
+    get:
+      description: Retrieves the complete transaction history for a client's credit
+        account.
+      parameters:
+      - description: Bearer {token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Client ID
+        in: path
+        name: clientID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.AccountStatementResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Get Client Account History
+      tags:
+      - CreditAccounts
+  /credit-accounts/clients/{clientID}/statement:
+    get:
+      description: Retrieves a client's account statement within a specified date
+        range.
+      parameters:
+      - description: Bearer {token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Client ID
+        in: path
+        name: clientID
+        required: true
+        type: integer
+      - description: Start date (YYYY-MM-DD)
+        in: query
+        name: startDate
+        type: string
+      - description: End date (YYYY-MM-DD)
+        in: query
+        name: endDate
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.AccountStatementResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Get Client Account Statement
       tags:
       - CreditAccounts
   /credit-requests:
